# secondbrain

./: .commitlintrc.json  .coverage.sparky.pid1064139.Xq9NmEpx.HwrnyBnPgKwh  .coverage.sparky.pid1064142.XdXwPvXx.HtXuYi8CUiDh  .coverage.sparky.pid1064148.XtVEqmex.HdxhQ1tTrUfh  .env.docker  .env.example  .env.test  .env.test.local  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .testmondata  .testmondata-shm  AGENTS.md  AI_SLOP_REMOVAL_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_ASSESSMENT.md  CODE_QUALITY_REPORT.md  CODE_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.mcp  EMBEDDING_PROVIDER_IMPLEMENTATION.md  EXECUTION_TASK_BREAKDOWN.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_QUALITY_CHECK_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_OLLAMA_REMOVAL.md  LICENSE-RISK-REPORT.md  LICENSE.md  MIGRATIONS.md  MONGODB_OPTIMIZATION_SUMMARY.md  Makefile  OPENSPEC_COVERAGE_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_BENCHMARKS.md  QUALITY_GAP_CLOSURE_SUMMARY.md  (+34 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test-quality-gates.yml
benchmarks/: __init__.py  n12_results.txt  n16_results.txt  n4_results.txt  n8_results.txt  summary.md  test_ingestion_benchmarks.py
benchmarks/baselines/: .gitkeep
docs/: COMPLETE-IMPLEMENTATION-PLAN.md  DOCUMENTATION_AUDIT_REPORT.md  IMPLEMENTATION-SUMMARY.md  LICENSE-RISK-REPORT.md  LICENSE.md  PRIORITY1-IMPLEMENTATION-SUMMARY.md  PRIORITY2-3-IMPLEMENTATION-PLAN.md  README.md  ROADMAP-PROGRESS.md  TESTING.md  TEST_PERFORMANCE.md  TEST_PERFORMANCE_OPTIMIZATION.md  changelog.md  implementation-plan-priority1.md  implementation-plan-priority2-remaining.md  index.md  license.md  license_analysis.json  migration.md  mkdocs.yml  performance-testing.md  python-cli-best-practices-checklist.md  roadmap-to-10.md  sbom.json
docs/api/: index.md
docs/api-reference/: circuit-breaker.md  cli.md  config.md  document.md  embedding.md  exceptions.md  index.md  logging.md  management.md  perf-monitor.md  pipeline.md  search.md  storage.md  types.md
docs/architecture/: ADR-001-cli-consolidation.md  DATA_FLOW.md  INTEGRATION_TEST_EVALUATION.md  LICENSE-RISK-REPORT.md  PERFORMANCE.md  SBOM_ANALYSIS.md  SCHEMA.md  index.md  license_analysis.json  sbom.json
docs/developer-guide/: RUNNING_TESTS.md  TESTING.md  TEST_PERFORMANCE_OPTIMIZATION.md  async-api.md  benchmarking.md  building.md  changelog.md  code-standards.md  configuration.md  contributing.md  dependency-management.md  development.md  docker.md  index.md  migrations.md  mutation-testing.md  onboarding.md  python-cli-best-practices-checklist.md  security.md  test-performance-baselines.md  test-qa-standards.md  testing.md
docs/examples/: README.md  basic-usage.md  circuit_breaker_usage.py  index.md  integrations.md  tracing_example.py
docs/getting-started/: DEPENDENCIES.md  configuration.md  index.md  installation.md  mongodb-authentication.md  quick-start.md  rag-quickstart.md  troubleshooting.md
docs/guide/: ASYNC.md  BUILDING.md  CHANGES.md  CONFIGURATION.md  DEVELOPMENT.md  DOCKER.md  MIGRATIONS.md  SECURITY.md
docs/security/: COMPREHENSIVE_SECURITY_REPORT.md  FINAL_QUALITY_AND_SECURITY_REPORT.md  FINAL_SECURITY_SCAN_REPORT.md  QUALITY_CHECK_REPORT.md  SECURITY-FINDINGS.md  THREAT_MODEL.md  bom.json  index.md  safety_report.json  vulnerability-remediation.md  vulnerability_report.md
docs/user-guide/: cli-reference.md  conversational-qa.md  document-ingestion.md  document-management.md  error-handling.md  index.md  observability.md  performance-guide.md  performance-optimization.md  search-guide.md
examples/: README.md  async_ingestion_example.py  circuit_breaker_usage.py  tracing_example.py
examples/advanced/: async_workflow.py  batch_ingestion.py  custom_chunking.py
examples/basic_usage/: ingest_documents.py  list_documents.py  semantic_search.py
examples/integrations/: fastapi_endpoint.py  flask_api.py
examples/scripts/: export_to_json.py  ingest_entire_directory.sh
reports/dependency-updates/: outdated-dependencies.txt
reports/security-audit/: pip-audit-report.txt  sbom.json
scripts/: README.md  audit_dependencies.sh  benchmark_compare.py  benchmark_tests.py  build.sh  cleanup_coverage.sh  cleanup_reports.sh  compare_benchmarks.py  dev-setup.sh  generate-sbom.sh  generate_sbom.py  generate_sbom.sh  generate_sbom_analysis.py  generate_test_embeddings.py  init-auth.sh  init-mongo.js  migrate_vector_index.py  ollama-startup.sh  open-coverage-dashboard.py  pre-commit-benchmark.sh  release.sh  run-mutation-testing.py  run_benchmarks.sh  run_qualitative_tests.sh  sbom_converter.py  security_scan.sh  start_test_services.sh  stop_test_services.sh  update_dependencies.sh  validate.sh  validate_dependencies.sh
src/secondbrain/: __init__.py  constants.py  exceptions.py  py.typed  types.py
src/secondbrain_cli/: __init__.py
src/secondbrain_common/: __init__.py  constants.py  exceptions.py
src/secondbrain_mcp/: __init__.py  server.py
tests/: TESTING_OPTIMIZATION.md  __init__.py  conftest.py  sample_size_config.py  stats_utils.py  test_coverage_gaps.py  test_dependency_scripts.py  test_final_coverage.py  test_observability_integration.py  test_performance.py  test_provider_switching.py
tests/data/: precomputed_embeddings.json
tests/factories/: __init__.py  chunk_factory.py  document_factory.py  embedding_factory.py  message_factory.py  session_factory.py
tests/integration/: __init__.py  conftest.py  test_ingestion_e2e.py  test_ingestion_e2e.py.backup  test_ingestion_e2e.py.bak  test_large_docs.py  test_mongo_real.py  test_network_partitions.py
tests/snapshots/: assembled_prompt.txt  conftest.py  context_assembly.json  sample_query.json
tests/test_chaos/: __init__.py  conftest.py  test_chaos_advanced.py  test_failure_injector.py  test_mongodb_failure.py  test_network_partitions.py  test_service_failures.py
tests/test_cli/: test_chat_commands.py  (+11 more)
(+359 files in other folders)
