[project]
name = "secondbrain"
version = "0.4.0"
description = "A local document intelligence CLI tool for semantic search"
requires-python = ">=3.11"
authors = [
    {name = "Bishal Chand", email = "bishal.chand@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["cli", "document", "embedding", "mongodb", "vector-search", "sentence-transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",  # CLI framework - stable API, minor updates only
    "docling>=2.81.0",  # Document parsing - requires recent features
    "docling-core>=2.48.4",  # Core types - matches docling version
    "pymongo>=4.6.0",  # MongoDB driver - async support required
    "motor>=3.0.0",  # Async MongoDB - requires pymongo 4.x compatibility
    "httpx>=0.28.1",  # HTTP client - async support for LLM calls
    "pydantic>=2.0.0",  # Data validation - v2 migration for performance
    "pydantic-settings>=2.0.0",  # Settings management - pydantic v2 compatible
    "rich>=14.0.0",  # CLI formatting - modern terminal output
    "python-dotenv>=1.2.2",  # Environment config - stable API
    "sentence-transformers>=5.0.0",  # Embedding models - requires recent PyTorch
    "numpy>=2.0.0",  # Numerical computing - array API compatibility
    "torch>=2.0.0",  # Deep learning - embedding model runtime
    "opentelemetry-api>=1.20.0",  # Telemetry - stable tracing API
    "opentelemetry-sdk>=1.20.0",  # Telemetry - tracing implementation
    "ollama>=0.1.0",  # Local LLM - early version, API may change
    "openai>=1.0.0",  # LLM provider - v1 SDK required
    "anthropic>=0.40.0",  # LLM provider - Claude models support
    "typing_extensions>=4.0.0",  # Type hints - backport new features
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.5",  # Linting/formatting - fast Rust-based tool
    "mypy>=1.8.0",  # Type checking - static analysis
    "pytest>=8.0.0",  # Test framework - v8 for performance
    "pytest-asyncio>=0.23.0",  # Async test support - modern async patterns
    "pytest-cov>=4.1.0",  # Coverage reporting - test quality
    "pytest-xdist>=3.0.0",  # Parallel tests - 18 workers for speed
    "pytest-timeout>=2.2.0",  # Test timeouts - prevent hangs
    "hypothesis>=6.0.0",  # Property-based testing - edge case discovery
    "bandit>=1.7.0",  # Security scanning - Python security issues
    "safety>=3.0.0",  # Vulnerability check - dependency audits
    "pip-audit>=2.7.0",  # Security audit - PyPI vulnerability check
    "pre-commit>=3.6.0",  # Git hooks - automated quality checks
    "pyinstaller>=6.20.0",  # Binary packaging - standalone executables
    "mongomock>=4.0.0",  # Test mocking - MongoDB without server
    "vulture>=2.11",  # Dead code detection - cleanup unused code
    "cyclonedx-bom>=7.0.0",  # SBOM generation - supply chain security
    "pipdeptree>=2.0.0",  # Dependency tree - visualize requirements
    "fastapi>=0.100.0",  # API framework - future REST API support
    "uvicorn>=0.1.0",  # ASGI server - async HTTP server
    "flask>=3.0.0",  # Web framework - alternative API option
    "mkdocs>=1.6.0",  # Documentation - static site generator
    "mkdocstrings>=0.24.0",  # API docs - auto-generate from docstrings
    "mkdocstrings-python>=2.0.0",  # Python plugin - mkdocstrings support
    "mkdocs-material>=9.5.0",  # Theme - professional documentation
    "jinja2>=3.1.6",  # Templating - security patch required
    "urllib3>=2.6.0",  # HTTP library - security updates
    "setuptools>=78.1.1",  # Build tooling - modern packaging
    "cryptography>=46.0.0",  # Crypto lib - security dependencies
    "pillow>=11.3.0",  # Image processing - document rendering
    "paramiko>=3.5.0",  # SSH library - secure file operations
    "PyJWT>=2.10.1",  # JWT tokens - authentication support
    "pyasn1>=0.6.0",  # ASN.1 parser - crypto library dependency
    "pyopenssl>=25.1.0",  # OpenSSL wrapper - secure connections
    "twisted>=25.5.0",  # Async framework - dependency for security libs
    "idna>=3.10",  # International domains - URL handling
    "wheel>=0.45.0",  # Binary wheels - package distribution
    "fpdf2>=2.7.0",  # PDF generation - document export
    "reportlab>=4.0.0",  # PDF library - complex document rendering
    "python-docx>=1.0.0",  # Word documents - DOCX parsing
]

qualitative = [
    "llama-cpp-python>=0.2.0",  # Local LLM - CPU inference support
    "transformers>=4.35.0",  # HuggingFace - model loading
    "accelerate>=0.25.0",  # Model optimization - GPU/CPU distribution
]

opentelemetry = [
    "opentelemetry-exporter-otlp>=1.20.0",  # OTLP exporter - remote tracing
    "opentelemetry-instrumentation-pymongo>=0.40.0",  # MongoDB auto-instrumentation
]

[project.scripts]
secondbrain = "secondbrain.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF", "D"]
ignore = []
extend-ignore = ["E501", "D406", "D407"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
    "tests/**" = ["BLE001", "D100", "D101", "D102", "D103", "D104", "N806", "SIM117", "F841", "B017", "PTH123", "D401", "SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["venv/", ".git/", "tests/", ".*\\.egg-info/", "scripts/", "docs/examples/integrations/"]
ignore_missing_imports = true
namespace_packages = false

[[tool.mypy.overrides]]
module = ["secondbrain.document"]
warn_unused_ignores = false
disable_error_code = ["arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = ["google.*"]
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers", "torch", "transformers"]
follow_imports = "skip"
ignore_missing_imports = true
disable_error_code = ["attr-defined", "no-any-return", "valid-type", "operator", "unreachable", "has-type", "misc"]

[[tool.mypy.overrides]]
module = ["pymongo", "pymongo.*", "motor", "motor.*"]
follow_imports = "skip"
ignore_missing_imports = true
disable_error_code = ["attr-defined", "no-any-return", "valid-type", "operator", "unreachable", "has-type", "misc", "return-value"]

[[tool.mypy.overrides]]
module = ["docling", "docling.*"]
follow_imports = "skip"
ignore_missing_imports = true
disable_error_code = ["attr-defined", "no-any-return", "valid-type", "operator", "unreachable", "has-type", "misc"]

[[tool.mypy.overrides]]
module = ["docs.examples.*"]
disable_error_code = ["misc"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
skips = ["B101", "B602"]
exclude_dirs = ["tests"]

[tool.safety]
ignore = [
    # NLTK vulnerabilities - dev only, not used in production code
    "CVE-2026-33230",
    "CVE-2026-33231",
    "GHSA-rf74-v2fm-23pw",
    
    # Transitive dependencies - mitigated by context
    "54843",
    "CVE-2023-26112",
    
    # Transformers - false positive for controlled model loading
    "85102",
    
    # System packages - not exploitable in CLI context
    "CVE-2025-8869",
    "CVE-2026-1703",
    
    # Transitive crypto dependencies
    "CVE-2025-69277",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--no-cov --timeout=300 -p no:warnings --dist=loadfile -n auto"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests that require external services",
    "unit: marks tests as unit tests that use mocks",
    "slow: marks tests as slow (takes >1s to execute)",
    "fast: marks tests as fast (takes <50ms to execute)",
    "medium: marks tests as medium speed (takes <500ms to execute)",
    "circuit_breaker: marks tests that involve circuit breaker behavior (may be slow)",
    "hypothesis: marks tests as property-based testing",
    "concurrent: marks tests as concurrency/thread safety tests (may be slow)",
    "deprecated: marks tests as deprecated (will be removed in future release)",
    "threshold(min=...): marks tests with minimum threshold requirements",
    "qualitative: marks tests as qualitative evaluation tests",
    "safety: marks tests for safety-related functionality (PII, dangerous topics)",
    "factual: marks tests for factual accuracy and verification",
    "hallucination: marks tests for hallucination detection",
    "robustness: marks tests for edge cases and adversarial inputs",
    "llm_judge: marks tests using LLM-based evaluation",
    "chaos: marks tests for chaos engineering (failure injection, resilience)",
    "threshold_validation: marks tests for threshold validation and sensitivity analysis",
    "xdist_group: marks tests that should run in same xdist worker (shared resources)",
]
filterwarnings = [
    "ignore::DeprecationWarning:docling",
    "ignore::DeprecationWarning:pyparsing",
    "ignore:.*This process.*is multi-threaded, use of fork.*",
    # Suppress OpenTelemetry exporter errors during test shutdown
    "ignore:Exception while exporting metrics:ValueError:opentelemetry",
    "ignore:I/O operation on closed file:ValueError:opentelemetry",
    "ignore:Exception while exporting Span:ValueError",
]
reruns = 0
reruns_delay = 0

[tool.hypothesis]
max_examples = 100
deadline = 500
database = ".hypothesis"

[tool.pytest-timeout]
timeout = 120
timeout_method = "thread"

[tool.pre-commit]
default_stages = ["pre-commit"]

[tool.vulture]
paths = ["src"]
ignore_decorators = ["@pytest.*"]
ignore_names = [
    "test_*",
    "setUp",
    "tearDown",
    "setUpModule",
    "tearDownModule",
    "cls",
    "exc_type",
    "exc_val",
    "exc_tb",
    "info",
    "description",
    "attributes",
]
min_confidence = 80
exclude = ["venv/*", ".git/*", "tests/*", "scripts/*"]
sort_by_size = true
verbose = false
