[project]
name = "secondbrain"
version = "0.4.0"
description = "A local document intelligence CLI tool for semantic search"
requires-python = ">=3.11"
authors = [
    {name = "Brian Hand", email = "handbrianc@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["cli", "document", "embedding", "mongodb", "vector-search", "openai-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.4.1",  # CLI framework - stable API, minor updates only
    "docling>=2.105.0",  # Document parsing - requires recent features
    "docling-core>=2.83.1",  # Core types - matches docling version
    "pymongo>=4.17.0",  # MongoDB driver - async support required
    "motor>=3.0.0",  # Async MongoDB - requires pymongo 4.x compatibility
    "httpx>=0.28.1",  # HTTP client - async support for LLM calls
    "pydantic>=2.13.4",  # Data validation - pydantic v2 compatible
    "pydantic-settings>=2.14.2",  # Settings management - pydantic v2 compatible
    "rich>=15.0.0",  # CLI formatting - modern terminal output
    "python-dotenv>=1.2.2",  # Environment config - stable API
    "numpy>=2.4.6",  # Numerical computing - array API compatibility
    "opentelemetry-api>=1.42.1",  # Telemetry - stable tracing API
    "opentelemetry-sdk>=1.42.1",  # Telemetry - tracing implementation
    "openai>=2.43.0",  # LLM provider - v1 SDK required
    "anthropic>=0.112.0",  # LLM provider - Claude models support
    "typing_extensions>=4.15.0",  # Type hints - backport new features
    "pyobjc-core>=12.2.1; sys_platform == 'darwin'",  # MacOS Objective-C bridge - required for ocrmac
    "pyobjc-framework-cocoa>=12.1; sys_platform == 'darwin'",  # MacOS Cocoa framework - required for ocrmac
    "pyobjc-framework-coreml>=12.1; sys_platform == 'darwin'",  # MacOS Core ML - required for ocrmac
    "pyobjc-framework-quartz>=12.1; sys_platform == 'darwin'",  # MacOS Quartz - required for ocrmac
    "pyobjc-framework-vision>=12.1; sys_platform == 'darwin'",  # MacOS Vision - required for ocrmac
]

[project.optional-dependencies]
# Core linting and formatting only
lint = [
    "ruff>=0.15.5",  # Linting/formatting - fast Rust-based tool
    "mypy>=1.8.0",  # Type checking - static analysis
]

# Core pytest and test infrastructure
test = [
    "pytest>=9.1.1",  # Test framework - v9 for performance
    "pytest-asyncio>=0.23.0",  # Async test support - modern async patterns
    "pytest-cov>=4.1.0",  # Coverage reporting - test quality
    "pytest-xdist>=3.0.0",  # Parallel tests - 18 workers for speed
    "pytest-timeout>=2.2.0",  # Test timeouts - prevent hangs
    "pytest-rerunfailures>=12.0",  # Retry flaky tests - concurrent test stability
    "hypothesis>=6.0.0",  # Property-based testing - edge case discovery
    "factory-boy>=3.3.0",  # Test factories - factory_boy for test data
    "mongomock>=4.0.0",  # Test mocking - MongoDB without server
]

# Security scanning tools
security = [
    "bandit>=1.7.0",  # Security scanning - Python security issues
    "safety>=3.0.0",  # Vulnerability check - dependency audits
    "pip-audit>=2.10.0",  # Security audit - PyPI vulnerability check
    "cyclonedx-bom>=7.0.0",  # SBOM generation - supply chain security
]

# Documentation generation
docs = [
    "mkdocs>=1.6.0",  # Documentation - static site generator
    "mkdocstrings>=0.24.0",  # API docs - auto-generate from docstrings
    "mkdocstrings-python>=2.0.3",  # Python plugin - mkdocstrings support
    "mkdocs-material>=9.7.6",  # Theme - professional documentation
    "jinja2>=3.1.6",  # Templating - security patch required
]

# Mutation testing
mutation = [
    "mutmut>=3.6.0",  # Mutation testing - verify test quality
]

# Pre-commit hooks
precommit = [
    "pre-commit>=4.6.0",  # Git hooks - automated quality checks
]

# Web frameworks and serving
web = [
    "fastapi>=0.136.3",  # API framework - future REST API support
    "uvicorn>=0.1.0",  # ASGI server - async HTTP server
    "flask>=3.0.0",  # Web framework - alternative API option
]

# Bundled extras (combines all dev tools - backward compatible with [dev])
bundled = [
    # All lint deps
    "ruff>=0.15.5",
    "mypy>=1.8.0",
    # All test deps
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-rerunfailures>=12.0",
    "hypothesis>=6.0.0",
    "factory-boy>=3.3.0",
    "mongomock>=4.0.0",
    # All security deps
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pip-audit>=2.10.0",
    "cyclonedx-bom>=7.0.0",
    # Misc dev tools
    "pre-commit>=4.6.0",
    "pyinstaller>=6.20.0",
    "vulture>=2.16",
    "pipdeptree>=2.35.3",
    # All docs deps
    "mkdocs>=1.6.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=2.0.3",
    "mkdocs-material>=9.7.6",
    "jinja2>=3.1.6",
    # All web deps
    "fastapi>=0.136.3",
    "uvicorn>=0.1.0",
    "flask>=3.0.0",
    # Transitive/util deps
    "urllib3>=2.6.0",
    "cryptography>=49.0.0",
    "pillow>=11.3.0",
    "paramiko>=3.5.0",
    "PyJWT>=2.13.0",
    "pyasn1>=0.6.3",
    "pyopenssl>=25.1.0",
    "twisted>=26.4.0",
    "idna>=3.18",
    "wheel>=0.47.0",
    "setuptools>=60.0.0",
    "fpdf2>=2.7.0",
    "reportlab>=5.0.0",
    "python-docx>=1.0.0",
    # Bundled extras (depends on mutation)
    "mutmut>=3.6.0",
]

# Alias [dev] to [bundled] for backward compatibility
dev = [
    "secondbrain[bundled]",
]

qualitative = [
    "llama-cpp-python>=0.2.0",  # Local LLM - CPU inference support
    "transformers>=5.12.1",  # HuggingFace - model loading
    "accelerate>=0.25.0",  # Model optimization - GPU/CPU distribution
]

rag = [
    "llama-cpp-python>=0.2.0",  # Local LLM inference for RAG pipeline
    "accelerate>=0.25.0",  # Model optimization for local LLM
]

opentelemetry = [
    "opentelemetry-exporter-otlp>=1.20.0",  # OTLP exporter - remote tracing
    "opentelemetry-instrumentation-pymongo>=0.40.0",  # MongoDB auto-instrumentation
]

[project.scripts]
secondbrain = "secondbrain.cli:main"

[build-system]
requires = ["setuptools>=60.0.0", "wheel"]  # setuptools v60+ required for pyproject.toml build backend support
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF", "D"]
ignore = []
extend-ignore = ["E501", "D406", "D407"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
    "tests/**" = ["BLE001", "D100", "D101", "D102", "D103", "D104", "N806", "SIM117", "F841", "B017", "PTH123", "D401", "SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["venv/", ".git/", "tests/", ".*\\.egg-info/", "scripts/", "docs/examples/integrations/"]
ignore_missing_imports = true
namespace_packages = false

[[tool.mypy.overrides]]
module = ["secondbrain.document"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["google.*"]
ignore_errors = true
ignore_missing_imports = true



[[tool.mypy.overrides]]
module = ["pymongo", "pymongo.*", "motor", "motor.*"]
follow_imports = "skip"
ignore_missing_imports = true
# Technical debt: restored incrementally — attr-defined/operator/unreachable/has-type remain for stub gaps; misc/no-any-return/valid-type/return-value removed for stricter checking
disable_error_code = ["attr-defined", "operator", "unreachable", "has-type"]



[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.bandit]
skips = ["B101", "B602"]
exclude_dirs = ["tests"]

[tool.safety]
ignore = [
    # NLTK vulnerabilities - dev only, not used in production code
    "CVE-2026-33230",
    "CVE-2026-33231",
    "GHSA-rf74-v2fm-23pw",
    
    # Transitive dependencies - mitigated by context
    "54843",
    "CVE-2023-26112",
    
    # Transformers - false positive for controlled model loading
    "85102",
    
    # System packages - not exploitable in CLI context
    "CVE-2025-8869",
    "CVE-2026-1703",
    
    # Transitive crypto dependencies
    "CVE-2025-69277",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--timeout=300 -p no:warnings --dist=loadfile -n auto --cov=secondbrain --cov-report=term-missing --cov-report=html --cov-fail-under=75 --reruns=0 --cov-config=.coveragerc"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests that require external services",
    "unit: marks tests as unit tests that use mocks",
    "slow: marks tests as slow (takes >1s to execute)",
    "fast: marks tests as fast (takes <50ms to execute)",
    "medium: marks tests as medium speed (takes <500ms to execute)",
    "circuit_breaker: marks tests that involve circuit breaker behavior (may be slow)",
    "hypothesis: marks tests as property-based testing",
    "concurrent: marks tests as concurrency/thread safety tests (may be slow)",
    "deprecated: marks tests as deprecated (will be removed in future release)",
    "threshold(min=...): marks tests with minimum threshold requirements",
    "qualitative: marks tests as qualitative evaluation tests",
    "safety: marks tests for safety-related functionality (PII, dangerous topics)",
    "factual: marks tests for factual accuracy and verification",
    "hallucination: marks tests for hallucination detection",
    "robustness: marks tests for edge cases and adversarial inputs",
    "llm_judge: marks tests using LLM-based evaluation",
    "chaos: marks tests for chaos engineering (failure injection, resilience)",
    "threshold_validation: marks tests for threshold validation and sensitivity analysis",
    "xdist_group: marks tests that should run in same xdist worker (shared resources)",
    "flaky: marks tests as known flaky tests that may need retry",
]
filterwarnings = [
    "ignore::DeprecationWarning:docling",
    "ignore::DeprecationWarning:pyparsing",
    "ignore:.*This process.*is multi-threaded, use of fork.*",
    # Suppress OpenTelemetry exporter errors during test shutdown
    "ignore:Exception while exporting metrics:ValueError:opentelemetry",
    "ignore:I/O operation on closed file:ValueError:opentelemetry",
    "ignore:Exception while exporting Span:ValueError",
]
reruns = 0
reruns_delay = 0

# Retry configuration for concurrent tests (enabled via @pytest.mark.flaky decorator)
# Default: reruns=0 (no retries), reruns_delay=0 (no delay)
# Concurrent tests use: @pytest.mark.flaky(reruns=2, rerun_delay=1)

[tool.hypothesis]
max_examples = 100
deadline = 500
database = ".hypothesis"

[tool.pytest-timeout]
timeout = 120
timeout_method = "thread"

[tool.mutmut]
python_paths = ["src"]
test_command = "pytest {mutmut_test_file} -xvs"

[tool.pre-commit]
default_stages = ["pre-commit"]

[tool.vulture]
paths = ["src"]
ignore_decorators = ["@pytest.*"]
ignore_names = [
    "test_*",
    "setUp",
    "tearDown",
    "setUpModule",
    "tearDownModule",
    "cls",
    "exc_type",
    "exc_val",
    "exc_tb",
    "info",
    "description",
    "attributes",
]
min_confidence = 80
exclude = ["venv/*", ".git/*", "tests/*", "scripts/*"]
sort_by_size = true
verbose = false
